// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiPopover children is rendered 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter css-17g0ovn-EuiPopover"
  id="1"
>
  <div
    class="euiPopover__anchor css-17g0ovn-EuiPopover"
  >
    <button />
  </div>
</div>
`;

exports[`EuiPopover is rendered 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter testClass1 testClass2 css-17g0ovn-EuiPopover"
  data-test-subj="test subject string"
  id="0"
>
  <div
    class="euiPopover__anchor css-17g0ovn-EuiPopover"
  >
    <button />
  </div>
</div>
`;

exports[`EuiPopover props anchorClassName is rendered 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter css-17g0ovn-EuiPopover"
  id="3"
>
  <div
    class="euiPopover__anchor test css-17g0ovn-EuiPopover"
  >
    <button />
  </div>
</div>
`;

exports[`EuiPopover props anchorPosition defaults to centerDown 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter css-17g0ovn-EuiPopover"
  id="6"
>
  <div
    class="euiPopover__anchor css-17g0ovn-EuiPopover"
  >
    <button />
  </div>
</div>
`;

exports[`EuiPopover props anchorPosition downRight is rendered 1`] = `
<div
  class="euiPopover euiPopover--anchorDownRight css-17g0ovn-EuiPopover"
  id="8"
>
  <div
    class="euiPopover__anchor css-17g0ovn-EuiPopover"
  >
    <button />
  </div>
</div>
`;

exports[`EuiPopover props anchorPosition leftCenter is rendered 1`] = `
<div
  class="euiPopover euiPopover--anchorLeftCenter css-17g0ovn-EuiPopover"
  id="7"
>
  <div
    class="euiPopover__anchor css-17g0ovn-EuiPopover"
  >
    <button />
  </div>
</div>
`;

exports[`EuiPopover props arrowChildren is rendered 1`] = `
<div>
  <div
    class="euiPopover euiPopover--anchorDownCenter euiPopover-isOpen css-17g0ovn-EuiPopover"
    id="19"
  >
    <div
      class="euiPopover__anchor css-17g0ovn-EuiPopover"
    >
      <button />
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
    <div
      data-focus-lock-disabled="disabled"
    >
      <div
        aria-describedby="generated-id"
        aria-live="off"
        aria-modal="true"
        class="euiPanel euiPanel--plain euiPanel--paddingMedium euiPopover__panel euiPopover__panel--bottom euiPopover__panel-isOpen css-1l4493j-euiPanel-grow-m-m-plain"
        data-autofocus="true"
        data-popover-panel="true"
        role="dialog"
        style="top: 16px; left: -22px; will-change: transform, opacity; z-index: 2000;"
        tabindex="0"
      >
        <div
          class="css-14sstxf-euiPopoverArrow-bottom"
          style="left: 10px; top: 0px;"
        >
          <span />
        </div>
        <p
          class="euiScreenReaderOnly"
          id="generated-id"
        >
          You are in a dialog. To close this dialog, hit escape.
        </p>
        <div />
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`EuiPopover props buffer 1`] = `
<div>
  <div
    class="euiPopover euiPopover--anchorDownCenter euiPopover-isOpen css-17g0ovn-EuiPopover"
    id="20"
  >
    <div
      class="euiPopover__anchor css-17g0ovn-EuiPopover"
    >
      <button />
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
    <div
      data-focus-lock-disabled="disabled"
    >
      <div
        aria-describedby="generated-id"
        aria-live="off"
        aria-modal="true"
        class="euiPanel euiPanel--plain euiPanel--paddingMedium euiPopover__panel euiPopover__panel--bottom euiPopover__panel-isOpen css-1l4493j-euiPanel-grow-m-m-plain"
        data-autofocus="true"
        data-popover-panel="true"
        role="dialog"
        style="top: 16px; left: -22px; will-change: transform, opacity; z-index: 2000;"
        tabindex="0"
      >
        <div
          class="css-14sstxf-euiPopoverArrow-bottom"
          style="left: 10px; top: 0px;"
        />
        <p
          class="euiScreenReaderOnly"
          id="generated-id"
        >
          You are in a dialog. To close this dialog, hit escape.
        </p>
        <div />
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`EuiPopover props buffer for all sides 1`] = `
<div>
  <div
    class="euiPopover euiPopover--anchorDownCenter euiPopover-isOpen css-17g0ovn-EuiPopover"
    id="21"
  >
    <div
      class="euiPopover__anchor css-17g0ovn-EuiPopover"
    >
      <button />
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
    <div
      data-focus-lock-disabled="disabled"
    >
      <div
        aria-describedby="generated-id"
        aria-live="off"
        aria-modal="true"
        class="euiPanel euiPanel--plain euiPanel--paddingMedium euiPopover__panel euiPopover__panel--bottom euiPopover__panel-isOpen css-1l4493j-euiPanel-grow-m-m-plain"
        data-autofocus="true"
        data-popover-panel="true"
        role="dialog"
        style="top: 16px; left: -22px; will-change: transform, opacity; z-index: 2000;"
        tabindex="0"
      >
        <div
          class="css-14sstxf-euiPopoverArrow-bottom"
          style="left: 10px; top: 0px;"
        />
        <p
          class="euiScreenReaderOnly"
          id="generated-id"
        >
          You are in a dialog. To close this dialog, hit escape.
        </p>
        <div />
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`EuiPopover props display block is rendered 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter css-1k1aqtq-EuiPopover"
  id="2"
>
  <div
    class="euiPopover__anchor css-1k1aqtq-EuiPopover"
  >
    <button />
  </div>
</div>
`;

exports[`EuiPopover props focusTrapProps is rendered 1`] = `
<div>
  <div
    class="euiPopover euiPopover--anchorDownCenter euiPopover-isOpen css-17g0ovn-EuiPopover"
    id="16"
  >
    <div
      class="euiPopover__anchor css-17g0ovn-EuiPopover"
    >
      <button />
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
    <div
      data-focus-lock-disabled="disabled"
    >
      <div
        aria-describedby="generated-id"
        aria-live="off"
        aria-modal="true"
        class="euiPanel euiPanel--plain euiPanel--paddingMedium euiPopover__panel euiPopover__panel--bottom euiPopover__panel-isOpen css-1l4493j-euiPanel-grow-m-m-plain"
        data-autofocus="true"
        data-popover-panel="true"
        role="dialog"
        style="top: 16px; left: -22px; will-change: transform, opacity; z-index: 2000;"
        tabindex="0"
      >
        <div
          class="css-14sstxf-euiPopoverArrow-bottom"
          style="left: 10px; top: 0px;"
        />
        <p
          class="euiScreenReaderOnly"
          id="generated-id"
        >
          You are in a dialog. To close this dialog, hit escape.
        </p>
        <div />
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`EuiPopover props isOpen defaults to false 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter css-17g0ovn-EuiPopover"
  id="9"
>
  <div
    class="euiPopover__anchor css-17g0ovn-EuiPopover"
  >
    <button />
  </div>
</div>
`;

exports[`EuiPopover props isOpen renders true 1`] = `
<div>
  <div
    class="euiPopover euiPopover--anchorDownCenter euiPopover-isOpen css-17g0ovn-EuiPopover"
    id="10"
  >
    <div
      class="euiPopover__anchor css-17g0ovn-EuiPopover"
    >
      <button />
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
    <div
      data-focus-lock-disabled="disabled"
    >
      <div
        aria-describedby="generated-id"
        aria-live="off"
        aria-modal="true"
        class="euiPanel euiPanel--plain euiPanel--paddingMedium euiPopover__panel euiPopover__panel--bottom euiPopover__panel-isOpen css-1l4493j-euiPanel-grow-m-m-plain"
        data-autofocus="true"
        data-popover-panel="true"
        role="dialog"
        style="top: 16px; left: -22px; will-change: transform, opacity; z-index: 2000;"
        tabindex="0"
      >
        <div
          class="css-14sstxf-euiPopoverArrow-bottom"
          style="left: 10px; top: 0px;"
        />
        <p
          class="euiScreenReaderOnly"
          id="generated-id"
        >
          You are in a dialog. To close this dialog, hit escape.
        </p>
        <div />
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`EuiPopover props offset with arrow 1`] = `
<div>
  <div
    class="euiPopover euiPopover--anchorDownCenter euiPopover-isOpen css-17g0ovn-EuiPopover"
    id="17"
    offset="10"
  >
    <div
      class="euiPopover__anchor css-17g0ovn-EuiPopover"
    >
      <button />
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
    <div
      data-focus-lock-disabled="disabled"
    >
      <div
        aria-describedby="generated-id"
        aria-live="off"
        aria-modal="true"
        class="euiPanel euiPanel--plain euiPanel--paddingMedium euiPopover__panel euiPopover__panel--bottom euiPopover__panel-isOpen css-1l4493j-euiPanel-grow-m-m-plain"
        data-autofocus="true"
        data-popover-panel="true"
        role="dialog"
        style="top: 26px; left: -22px; will-change: transform, opacity; z-index: 2000;"
        tabindex="0"
      >
        <div
          class="css-14sstxf-euiPopoverArrow-bottom"
          style="left: 10px; top: 0px;"
        />
        <p
          class="euiScreenReaderOnly"
          id="generated-id"
        >
          You are in a dialog. To close this dialog, hit escape.
        </p>
        <div />
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`EuiPopover props offset without arrow 1`] = `
<div>
  <div
    class="euiPopover euiPopover--anchorDownCenter euiPopover-isOpen css-17g0ovn-EuiPopover"
    id="18"
    offset="10"
  >
    <div
      class="euiPopover__anchor css-17g0ovn-EuiPopover"
    >
      <button />
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
    <div
      data-focus-lock-disabled="disabled"
    >
      <div
        aria-describedby="generated-id"
        aria-live="off"
        aria-modal="true"
        class="euiPanel euiPanel--plain euiPanel--paddingMedium euiPopover__panel euiPopover__panel--bottom euiPopover__panel-isOpen css-1l4493j-euiPanel-grow-m-m-plain"
        data-autofocus="true"
        data-popover-panel="true"
        role="dialog"
        style="top: 18px; left: -22px; will-change: transform, opacity; z-index: 2000;"
        tabindex="0"
      >
        <p
          class="euiScreenReaderOnly"
          id="generated-id"
        >
          You are in a dialog. To close this dialog, hit escape.
        </p>
        <div />
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`EuiPopover props ownFocus defaults to true 1`] = `
<div>
  <div
    class="euiPopover euiPopover--anchorDownCenter euiPopover-isOpen css-17g0ovn-EuiPopover"
    id="11"
  >
    <div
      class="euiPopover__anchor css-17g0ovn-EuiPopover"
    >
      <button />
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
    <div
      data-focus-lock-disabled="disabled"
    >
      <div
        aria-describedby="generated-id"
        aria-live="off"
        aria-modal="true"
        class="euiPanel euiPanel--plain euiPanel--paddingMedium euiPopover__panel euiPopover__panel--bottom euiPopover__panel-isOpen css-1l4493j-euiPanel-grow-m-m-plain"
        data-autofocus="true"
        data-popover-panel="true"
        role="dialog"
        style="top: 16px; left: -22px; will-change: transform, opacity; z-index: 2000;"
        tabindex="0"
      >
        <div
          class="css-14sstxf-euiPopoverArrow-bottom"
          style="left: 10px; top: 0px;"
        />
        <p
          class="euiScreenReaderOnly"
          id="generated-id"
        >
          You are in a dialog. To close this dialog, hit escape.
        </p>
        <div />
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`EuiPopover props ownFocus renders false 1`] = `
<div>
  <div
    class="euiPopover euiPopover--anchorDownCenter euiPopover-isOpen css-17g0ovn-EuiPopover"
    id="12"
  >
    <div
      class="euiPopover__anchor css-17g0ovn-EuiPopover"
    >
      <button />
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
    <div
      data-focus-lock-disabled="disabled"
    >
      <div
        aria-live="assertive"
        aria-modal="true"
        class="euiPanel euiPanel--plain euiPanel--paddingMedium euiPopover__panel euiPopover__panel--bottom euiPopover__panel-isOpen css-1l4493j-euiPanel-grow-m-m-plain"
        data-popover-panel="true"
        role="dialog"
        style="top: 16px; left: -22px; will-change: transform, opacity; z-index: 2000;"
      >
        <div
          class="css-14sstxf-euiPopoverArrow-bottom"
          style="left: 10px; top: 0px;"
        />
        <div />
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`EuiPopover props panelClassName is rendered 1`] = `
<div>
  <div
    class="euiPopover euiPopover--anchorDownCenter euiPopover-isOpen css-17g0ovn-EuiPopover"
    id="13"
  >
    <div
      class="euiPopover__anchor css-17g0ovn-EuiPopover"
    >
      <button />
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
    <div
      data-focus-lock-disabled="disabled"
    >
      <div
        aria-describedby="generated-id"
        aria-live="off"
        aria-modal="true"
        class="euiPanel euiPanel--plain euiPanel--paddingMedium euiPopover__panel euiPopover__panel--bottom euiPopover__panel-isOpen test css-1l4493j-euiPanel-grow-m-m-plain"
        data-autofocus="true"
        data-popover-panel="true"
        role="dialog"
        style="top: 16px; left: -22px; will-change: transform, opacity; z-index: 2000;"
        tabindex="0"
      >
        <div
          class="css-14sstxf-euiPopoverArrow-bottom"
          style="left: 10px; top: 0px;"
        />
        <p
          class="euiScreenReaderOnly"
          id="generated-id"
        >
          You are in a dialog. To close this dialog, hit escape.
        </p>
        <div />
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`EuiPopover props panelPaddingSize is rendered 1`] = `
<div>
  <div
    class="euiPopover euiPopover--anchorDownCenter euiPopover-isOpen css-17g0ovn-EuiPopover"
    id="14"
  >
    <div
      class="euiPopover__anchor css-17g0ovn-EuiPopover"
    >
      <button />
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
    <div
      data-focus-lock-disabled="disabled"
    >
      <div
        aria-describedby="generated-id"
        aria-live="off"
        aria-modal="true"
        class="euiPanel euiPanel--plain euiPanel--paddingSmall euiPopover__panel euiPopover__panel--bottom euiPopover__panel-isOpen css-6zsgh2-euiPanel-grow-m-s-plain"
        data-autofocus="true"
        data-popover-panel="true"
        role="dialog"
        style="top: 16px; left: -22px; will-change: transform, opacity; z-index: 2000;"
        tabindex="0"
      >
        <div
          class="css-14sstxf-euiPopoverArrow-bottom"
          style="left: 10px; top: 0px;"
        />
        <p
          class="euiScreenReaderOnly"
          id="generated-id"
        >
          You are in a dialog. To close this dialog, hit escape.
        </p>
        <div />
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`EuiPopover props panelProps is rendered 1`] = `
<div>
  <div
    class="euiPopover euiPopover--anchorDownCenter euiPopover-isOpen css-17g0ovn-EuiPopover"
    id="15"
  >
    <div
      class="euiPopover__anchor css-17g0ovn-EuiPopover"
    >
      <button />
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
    <div
      data-focus-lock-disabled="disabled"
    >
      <div
        aria-describedby="generated-id"
        aria-live="off"
        aria-modal="true"
        class="euiPanel euiPanel--plain euiPanel--paddingMedium euiPopover__panel euiPopover__panel--bottom euiPopover__panel-isOpen testClass1 testClass2 css-1l4493j-euiPanel-grow-m-m-plain"
        data-autofocus="true"
        data-popover-panel="true"
        data-test-subj="test subject string"
        role="dialog"
        style="top: 16px; left: -22px; will-change: transform, opacity; z-index: 2000;"
        tabindex="0"
      >
        <div
          class="css-14sstxf-euiPopoverArrow-bottom"
          style="left: 10px; top: 0px;"
        />
        <p
          class="euiScreenReaderOnly"
          id="generated-id"
        >
          You are in a dialog. To close this dialog, hit escape.
        </p>
        <div />
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
  </div>
</div>
`;
